test/TestPhases/parser/invalid/docbeforestatement.blc

@[EntryPoint]
activity main()
    /// doc syntactically wrong here
    await true
end